--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatib" content="ie=edge">
     <meta http-equiv="refresh" content="2" >
     <title>diseño2</title>
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
    
 </head>
 <body>
